# cosmic-inference-demo

./: README.md  core.html  index.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
_proc/: index.ipynb
_proc/_docs/: search.json  sitemap.xml
cosmic_inference_demo/: _modidx.py
nbs/: index.ipynb  nbdev.yml
